--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,6 @@
 [target.wasm32-unknown-unknown]
 runner = "wasm-server-runner"
+
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = ["-Clink-arg=-fuse-ld=mold", "-Zshare-generics=y"]
