--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+bevy = { version = "0.9", features = [] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 bevy = { version = "0.9", features = ["dynamic"] }
