--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "bevy_nix_vscode_template"
-version = "0.1.0"
-edition = "2021"
+version = "0.18.0"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-bevy = { version = "0.16.1", features = [] }
+bevy = { version = "0.18.0", features = [] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-bevy = { version = "0.16.1", features = ["dynamic_linking"] }
+bevy_dylib = { version = "0.18.0-rc.1" }
+bevy = { version = "0.18.0", features = ["wayland", "dynamic_linking" ]  }
